# trainscanner.app

./: .gitignore  .gitmodules  Makefile  pyproject.toml
macos/: Makefile  pyproject.toml  run_ts_converter.py  ts_converter.spec
pyinstaller/: Makefile  run_trainscanner.py  trainscanner.spec
