[tool.poetry]
name = "trainscanner-app"
version = "0.1.0"
description = ""
authors = ["vitroid <vitroid@gmail.com>"]
readme = "README.md"
packages = [{include = "trainscanner"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyinstaller = "^6.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
