[tool.poetry]
name = "trainscanner-pyinstaller"
version = "0.1.0"
description = "TrainScanner App with PyInstaller"
authors = ["vitroid"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyinstaller = "^6.6.0"
Pillow = ">=11.2.1,<12.0.0"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
trainscanner = "^0.23.0"
PyQt6 = "^6.6.1"
jaraco-text = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 